fix(sidenavigation,action): text and icon alignment in the navigation items (#1305)

--- a/projects/ng-aquila/src/action/action.component.scss
+++ b/projects/ng-aquila/src/action/action.component.scss
@@ -72,6 +72,7 @@
     transition: all 0.2s ease;
     transform: rotateZ(0);
     margin-right: nx-spacer(2xs);
+    margin-top: 3px;
     flex: 0 0 auto;
     font-size: v(action-expand-icon-size);
 
@@ -84,7 +85,7 @@
 
 .nx-action__wrapper {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     position: relative;
     overflow: hidden;
 
@@ -104,6 +105,7 @@
     position: relative;
     justify-content: center;
     display: flex;
+    margin-top: 2px;
 
     :host-context([dir='rtl']) & {
         padding-right: initial;
